--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,7 @@
         </nav>
     </div>
     <!--نهاية القائمة العلوية-->
+    <!--بداية المنتجات المميزة-->
     <div class="row">
         <div id="carousel-featured" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators custom-carousel-indicators">
@@ -179,6 +180,29 @@
             <button class="carousel-control-next" data-bs-target="#carousel-featured" data-bs-slide="next">
                 <i class="fa-solid fa-chevron-left"></i>
             </button>
+        </div>
+    </div>
+    <!--نهاية المنتجات المميزة-->
+
+    <div class="container">
+        <div class="row">
+            <div id="store-features" class="col-6 offset-3">
+                <h3 class="text-center">مميزات المتجر</h3>
+                <div class="row">
+                    <div class="col-4 text-center feature">
+                        <img src="images/feature_1.png" alt="feature_1">
+                        <div>التوصيل المجاني</div>
+                    </div>
+                    <div class="col-4 text-center feature">
+                        <img src="images/feature_2.png" alt="feature_2">
+                        <div>ضمان المنتج سنه</div>
+                    </div>
+                    <div class="col-4 text-center feature">
+                        <img src="images/feature_3.png" alt="feature_3">
+                        <div>استرجاع المنتج</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
    </div>
